attach Upload component Route to App component; also fix the issue that NextVideo'sdisplay might overlap with Player component

--- a/src/components/NextVideos/NextVideos.scss
+++ b/src/components/NextVideos/NextVideos.scss
@@ -26,7 +26,7 @@
         padding-left: 0;
         padding-right: 6rem;
         margin-bottom: 0;
-        margin-top:53rem;
+        margin-top: 60vw;
     }
 
     &__title {
@@ -42,13 +42,14 @@
 
             &-left-image {
                 height: 100%;
-                &>img{
-                    height:100%;
+
+                &>img {
+                    height: 100%;
                     border-radius: 4px;
                     background-color: #E1E1E1;
                 }
             }
-            
+
 
             &-right {
                 @include flex(column, space-between, flex-start);
